--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "3.6"
-  - "3.7-dev"
+#  - "3.7-dev"  Disabled as PyYAML seems to fail as of 180421 https://travis-ci.org/chrizzFTD/naming/jobs/369410602
 install:
   - pip install python-coveralls
 script:
