--- a/setup.cfg
+++ b/setup.cfg
@@ -17,4 +17,4 @@ classifiers =
 packages = find:
 
 [options.extras_require]
-docs = sphinx_autodoc_typehints; sphinx_rtd_theme
+docs = sphinx_autodoc_typehints; sphinx_rtd_theme; sphinx-toggleprompt; sphinx-copybutton;
