update python versions and doc dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,13 +8,18 @@ keywords = name names naming convention configuration config cfg regex
 author_email = chris.gfz@gmail.com
 author = Christian López Barrón
 url = https://github.com/chrizzFTD/naming
+# Try to align to https://devguide.python.org/versions/
 classifiers =
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages = find:
 
 [options.extras_require]
-docs = sphinx_autodoc_typehints; sphinx_rtd_theme; sphinx-toggleprompt; sphinx-copybutton;
+# docs dependencies install:
+# python -m pip install sphinx myst-parser sphinx-toggleprompt sphinx-copybutton sphinx-togglebutton sphinx-hoverxref sphinx_autodoc_typehints sphinx_rtd_theme
+docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; sphinx_autodoc_typehints; sphinx_rtd_theme
