adding conda install for graphviz

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,5 +21,6 @@ packages = find:
 
 [options.extras_require]
 # docs dependencies install:
+# conda install --channel conda-forge pygraphviz
 # python -m pip install sphinx myst-parser sphinx-toggleprompt sphinx-copybutton sphinx-togglebutton sphinx-hoverxref sphinx_autodoc_typehints sphinx_rtd_theme
 docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; sphinx_autodoc_typehints; sphinx_rtd_theme
