Revert "try out fork with new pyscript"
This reverts commit d4e81e298e95a0cf9e02319d509a7ccc947e28bb.

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ packages = find:
 # docs dependencies install:
 # conda install --channel conda-forge pygraphviz
 # python -m pip install sphinx myst-parser sphinx-toggleprompt sphinx-copybutton sphinx-togglebutton sphinx-hoverxref sphinx_autodoc_typehints sphinx_rtd_theme
-docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; sphinx_autodoc_typehints; sphinx_rtd_theme; sphinx-pyscript @ git+https://github.com/chrizzFTD/sphinx-pyscript.git@pyscript-rtfd
+docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; sphinx_autodoc_typehints; sphinx_rtd_theme; sphinx-pyscript @ git+https://github.com/JeffersGlass/sphinx-pyscript.git@pyscript-2024.4.2
