--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ author = Christian López Barrón
 url = https://github.com/chrizzFTD/naming
 # Try to align to https://devguide.python.org/versions/
 classifiers =
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
